# Personal_Tracking_AI_Assistant

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
.tools/: parse-check.cjs  parse-check.mjs
apps/agent/: README.md  package.json  tsconfig.json
apps/agent/src/: api.ts  config.ts  logger.ts  main.ts  preload.ts  storage.ts  sync.ts  tracker.ts
apps/agent/src/ui/: signin.html
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260101_0000_a1b2c3d4e5f6_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: agent.py  insights.py  providers.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: analytics.py  auth.py  chat.py  devices.py  insights.py  tracking.py  users.py  ws.py
apps/api/app/core/: config.py  database.py  logging.py  redis_client.py  security.py
apps/api/app/models/: __init__.py  _mixins.py  app_usage.py  chat.py  coding.py  device.py  insight.py  session.py  user.py
apps/api/app/schemas/: analytics.py  auth.py  chat.py  insight.py  tracking.py  user.py
apps/api/app/scripts/: init_db.py  seed.py
apps/api/app/services/: analytics.py  classification.py  realtime.py
apps/web/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/lib/: api.ts  (+2 more)
infra/nginx/: nginx.conf
(+28 files in other folders)
