[project]
name = "ptaa-api"
version = "0.1.0"
description = "Personal Tracking AI Assistant — FastAPI backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "SIM", "RUF"]
ignore = ["B008", "N803", "N806"]

[tool.ruff.lint.per-file-ignores]
# Migration files are repetitive boilerplate where line-length hurts readability.
"alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
